--- a/index.html
+++ b/index.html
@@ -335,19 +335,19 @@
             <button class="plan-button">Выбрать план</button>
         </div>
     </div>
-        <div class="contact-form-wrapper">
-    <div class="contact-form">
-        <input type="text" placeholder="Имя">
-        <input type="tel" placeholder="+7 (900) 000-00-00">
-        <button class="submit-button"><span></span></button>
-        <p>Нажимая на кнопку вы подтверждаете своё согласие на обработку персональных данных</p>
-    </div>
-            </div>
+         <div class="contact-form-wrapper">
+            <form action="#" class="form-container">
+                <input type="text" placeholder="Имя">
+                <input type="tel" placeholder="+7 (900) 300 30 30">
+                <button class="submit-button"><span></span></button>
+                <div class="disclaimer">Нажимая на кнопку, вы подтверждаете своё согласие на обработку персональных данных</div>
+            </form>
+        </div>
     </div>
 </section>
 
 <!-- Reviews -->
-<<section class="reviews">
+<section class="reviews">
     <div class="container">
     <div class="reviews-container">
         <h2 class="reviews-title">Отзывы</h2>
@@ -407,9 +407,18 @@
 <!-- Footer -->
 <footer>
     <div class="container">
-        <h2 class="contact-title">Остались вопросы?</h2>
-        <p class="contact-text">Pirate ipsum argh bounty warp jack.</p>
-        <button class="contact-button">Написать ментору &#8594;</button>
+        <div class="Contact">
+            <div class ="contactQuestions">
+                <h2 class="contact-title">Остались вопросы?</h2>
+                <p class="contact-text">Pirate ipsum argh bounty warp jack.</p>
+            </div>
+            <div class="contactTelegram">
+                <img src="images/MentorAvatar.png" alt="Mentor's foto">
+                <p>Написать ментору</p>
+                <a href="#"></a>
+            </div>
+    </div>
+        <div class="contact-mentor-wrapper"></div>
     <p>© 2025 Все права защищены</p>
     </div>
 </footer>
