--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
 <!-- Training -->
 <section class="shop">
     <div class="container">
-    <h2 class="shop-title">Магазин</h2>
+    <h1 class="shop-title">Магазин</h1>
     <div class="shop-categories">
         <button class="category active">Аксессуары</button>
         <button class="category">Шахматные наборы</button>
@@ -335,19 +335,28 @@
             <button class="plan-button">Выбрать план</button>
         </div>
     </div>
-         <div class="contact-form-wrapper">
+        <div class="contact-form-wrapper">
             <form action="#" class="form-container">
                 <input type="text" placeholder="Имя">
                 <input type="tel" placeholder="+7 (900) 300 30 30">
                 <button class="submit-button"><span></span></button>
                 <div class="disclaimer">Нажимая на кнопку, вы подтверждаете своё согласие на обработку персональных данных</div>
             </form>
-        </div>
+    <!--<div class="contact-form">
+        <form action="">
+            <input type="text" placeholder="Имя">
+            <input type="tel" placeholder="+7 (900) 000-00-00">
+            <button class="submit-button"><span></span></button>
+            <p>Нажимая на кнопку вы подтверждаете своё согласие на обработку персональных данных</p>
+        </form>
+    </div>-->
+            </div>
+
     </div>
 </section>
 
 <!-- Reviews -->
-<section class="reviews">
+<<section class="reviews">
     <div class="container">
     <div class="reviews-container">
         <h2 class="reviews-title">Отзывы</h2>
@@ -419,8 +428,21 @@
             </div>
         </div>
         <hr>
-        <div class="contact-mentor-wrapper"></div>
-    <p>© 2025 Все права защищены</p>
+        <div class="footerDisclaimer">
+            <div class="socialMediaFooter">
+                <p>@ bilged brig 2024</p>
+                <a href="#" class="TelegramFooter"></a>
+                <a href="#" class="vkFooter"></a>
+            </div>
+            <div class="linksFooter">
+                <a href="#">fer shiver salmagundi.</a>
+                <a href="#">fer shiver salmagundi.</a>
+                <a href="#">fer shiver salmagundi.</a>
+            </div>
+        </div>
+        <p class="footer-OtherInfo">Bilge schooner fleet fathom hogshead coffer anchor.
+            Gabion hands spot hands pinnace bilged brig overhaul bow.
+            Pirate yer aye shot blimey jones' coffer. Brig gangway fer shiver salmagundi.</p>
     </div>
 </footer>
 
