--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/fonts.css">
     <link rel="stylesheet" href="css/variables.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lora:ital,
+    wght@0,400..700;1,400..700&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Geologica:wght@100..900&display=swap" rel="stylesheet">
 </head>
 <body>
 
@@ -45,92 +52,6 @@
         </div>
     </div>
 </header>
-
-<!--<section class="subscribe-slider" id="subscribe">-->
-<!--    <div class="container">-->
-<!--        <h2 class="subscribeSlider-Title">Подпишись на блог наставника и ты узнаешь</h2>-->
-<!--        <p class="subscribeSlider-info">Cамые свежие новости, стратегии, историю шахмат.-->
-<!--            Будь в курсе грядущих турниров и просто получай хорошее настроение</p>-->
-<!--        <div class="slider">-->
-<!--            <div class="slide">-->
-<!--                <img src="images/news.jpg" alt="Новости">-->
-<!--                <p>Самые свежие новости</p>-->
-<!--            </div>-->
-<!--            <div class="slide">-->
-<!--                <img src="images/strategy.jpg" alt="Стратегии">-->
-<!--                <p>Новые стратегии</p></div>-->
-<!--            <div class="slide">-->
-<!--                <img src="images/tournaments.jpg" alt="Турниры">-->
-<!--                <p>Информация о грядущих турнирах</p>-->
-<!--            </div>-->
-<!--        </div>-->
-<!--    </div>-->
-<!--</section>-->
-
-
-<!--<section class="shop">-->
-<!--    <div class="container">-->
-<!--        <h1>Магазин шахматных товаров</h1>-->
-<!--        <div class="products">-->
-<!--            <div class="product">-->
-<!--                <img src="images/chess-set.jpg" alt="Шахматный набор">-->
-<!--                <h3>Шахматный набор</h3>-->
-<!--                <p>Классические шахматы с деревянными фигурами.</p>-->
-<!--                <span class="price">₽3 500</span>-->
-<!--                <button class="btn">Купить</button>-->
-<!--            </div>-->
-<!--            <div class="product">-->
-<!--                <img src="images/chess-clock.jpg" alt="Шахматные часы">-->
-<!--                <h3>Шахматные часы</h3>-->
-<!--                <p>Электронные шахматные часы с таймером.</p>-->
-<!--                <span class="price">₽2 800</span>-->
-<!--                <button class="btn">Купить</button>-->
-<!--            </div>-->
-<!--        </div>-->
-<!--    </div>-->
-<!--</section>-->
-
-<!--<section class="faq">-->
-<!--    <div class="container">-->
-<!--        <h1>Часто задаваемые вопросы</h1>-->
-<!--        <div class="faq-item">-->
-<!--            <h3>Как записаться на уроки?</h3>-->
-<!--            <p>Вы можете оставить заявку через страницу "Контакты" или написать нам на почту.</p>-->
-<!--        </div>-->
-<!--        <div class="faq-item">-->
-<!--            <h3>Какие есть уровни обучения?</h3>-->
-<!--            <p>У нас есть курсы для новичков, продвинутых игроков и профессионалов.</p>-->
-<!--        </div>-->
-<!--    </div>-->
-<!--</section>-->
-
-<!--<section class="contact">-->
-<!--    <div class="container">-->
-<!--        <h1>Свяжитесь с нами</h1>-->
-<!--        <form class="contact-form">-->
-<!--            <label>Ваше имя</label>-->
-<!--            <input type="text" placeholder="Введите имя">-->
-
-<!--            <label>Email</label>-->
-<!--            <input type="email" placeholder="Введите email">-->
-
-<!--            <label>Сообщение</label>-->
-<!--            <textarea placeholder="Введите сообщение"></textarea>-->
-
-<!--            <button type="submit" class="btn">Отправить</button>-->
-<!--        </form>-->
-<!--    </div>-->
-<!--</section>-->
-
-
-
-<!--&lt;!&ndash; 🔹 Подвал &ndash;&gt;-->
-<!--<footer class="footer">-->
-<!--    <div class="container">-->
-<!--        <p>© 2024 Luty Chess</p>-->
-<!--    </div>-->
-<!--</footer>-->
-
 <section class="subscribe-slider">
     <div class="container">
     <h2 class="subscribeSlider-Title">Подпишись на блог наставника и ты узнаешь</h2>
@@ -157,9 +78,9 @@
         </div>
     </div>
     <div class="levels">
-        <div class="offer-block">
+        <div class="offer-block_tags">
             <h2>Чему мы учим на наших занятиях</h2>
-            <div class="tags">
+            <div class="offer_tags">
                 <span>В режиме Pro</span>
                 <span>В режиме Middle</span>
                 <span>В режиме Junior</span>
@@ -192,7 +113,7 @@
                 Gabion hands spot hands pinnace bilged brig overhaul bow.
                 Pirate yer aye shot blimey jones' coffer. Brig gangway fer shiver salmagundi.</p>
         </div>
-        <div class="offer-block">
+        <div class="offer-block_Mid">
             <h2>Средний Уровень</h2>
         </div>
         <div class="offerDescriptionBlock">
