--- a/index.html
+++ b/index.html
@@ -69,21 +69,21 @@
     <div class="container">
     <div class="intro">
         <div class="tags">
-            <span>Мы предлагаем</span>
-            <span>Обучение до уровня PRO</span>
-            <span>Статистика</span>
-            <span>Разборы сложных стратегий</span>
-            <span>Турниры</span>
-            <span>И это не всё</span>
+            <span class="tag active">Мы предлагаем</span>
+            <span class="tag">Обучение до уровня PRO</span>
+            <span class="tag">Статистика</span>
+            <span class="tag">Разборы сложных стратегий</span>
+            <span class="tag">Турниры</span>
+            <span class="tag">И это не всё</span>
         </div>
     </div>
     <div class="levels">
         <div class="offer-block_tags">
             <h2>Чему мы учим на наших занятиях</h2>
             <div class="offer_tags">
-                <span>В режиме Pro</span>
-                <span>В режиме Middle</span>
-                <span>В режиме Junior</span>
+                <span class="offer-tag">В режиме Pro</span>
+                <span class="offer-tag">В режиме Middle</span>
+                <span class="offer-tag">В режиме Junior</span>
             </div>
         </div>
         <div class="offerDescriptionBlock">
@@ -99,7 +99,7 @@
                 Pirate yer aye shot blimey jones' coffer. Brig gangway fer shiver salmagundi.</p>
         </div>
         <div class="offer-block">
-            <h1>Про</h1>
+            <h2>Про</h2>
         </div>
         <div class="offerDescriptionBlock">
             <h4>Про</h4>
@@ -165,39 +165,74 @@
     <div class="shop-grid">
         <div class="product">
             <img src="images/ChessBoard.png" alt="product image" class="product-image">
-            <p class="product-name">Bilge schooner fleet fathom hogshead coffer anchor. </p>
-            <span class="product-price">3 350 ₽</span>
-            <button class="buy-button">Купить</button>
+            <div class="product-info">
+                <div class="product-footer">
+                    <p class="product-name">Bilge schooner fleet fathom hogshead coffer anchor.</p>
+                    <div class="panel-price">
+                        <span class="product-price">3 350 ₽</span>
+                        <button class="buy-button">Купить</button>
+                    </div>
+                </div>
+            </div>
         </div>
         <div class="product">
             <img src="images/PerspectivBoard.png" alt="product image" class="product-image">
-            <p class="product-name">Bilge schooner fleet fathom hogshead coffer anchor. </p>
-            <span class="product-price">3 350 ₽</span>
-            <button class="buy-button">Купить</button>
+            <div class="product-info">
+                <div class="product-footer">
+                    <p class="product-name">Bilge schooner fleet fathom hogshead coffer anchor.</p>
+                    <div class="panel-price">
+                        <span class="product-price">3 350 ₽</span>
+                        <button class="buy-button">Купить</button>
+                    </div>
+                </div>
+            </div>
         </div>
         <div class="product">
             <img src="images/ChessBoardCut.png" alt="product image" class="product-image">
-            <p class="product-name">Bilge schooner fleet fathom hogshead coffer anchor. </p>
-            <span class="product-price">3 350 ₽</span>
-            <button class="cart-button">В корзине</button>
+            <div class="product-info">
+                <div class="product-footer">
+                    <p class="product-name">Bilge schooner fleet fathom hogshead coffer anchor.</p>
+                    <div class="panel-price">
+                        <button class="cart-button">В корзине</button>
+                    </div>
+                </div>
+            </div>
         </div>
         <div class="product">
             <img src="images/ChessBoardBright.png" alt="product image" class="product-image">
-            <p class="product-name">Bilge schooner fleet fathom hogshead coffer anchor. </p>
-            <span class="product-price">3 350 ₽</span>
-            <button class="buy-button">Купить</button>
+            <div class="product-info">
+                <div class="product-footer">
+                    <p class="product-name">Bilge schooner fleet fathom hogshead coffer anchor.</p>
+                    <div class="panel-price">
+                        <span class="product-price">3 350 ₽</span>
+                        <button class="buy-button">Купить</button>
+                    </div>
+                </div>
+            </div>
         </div>
         <div class="product">
             <img src="images/ChessBoardBright.png" alt="product image" class="product-image">
-            <p class="product-name">Bilge schooner fleet fathom hogshead coffer anchor. а</p>
-            <span class="product-price">3 350 ₽</span>
-            <button class="buy-button">Купить</button>
+            <div class="product-info">
+                <div class="product-footer">
+                    <p class="product-name">Bilge schooner fleet fathom hogshead coffer anchor.</p>
+                    <div class="panel-price">
+                        <span class="product-price">3 350 ₽</span>
+                        <button class="buy-button">Купить</button>
+                    </div>
+                </div>
+            </div>
         </div>
         <div class="product">
             <img src="images/ChessBoardBright.png" alt="product image" class="product-image">
-            <p class="product-name">Bilge schooner fleet fathom hogshead coffer anchor. </p>
-            <span class="product-price">3 350 ₽</span>
-            <button class="buy-button">Купить</button>
+            <div class="product-info">
+                <div class="product-footer">
+                    <p class="product-name">Bilge schooner fleet fathom hogshead coffer anchor.</p>
+                    <div class="panel-price">
+                        <span class="product-price">3 350 ₽</span>
+                        <button class="buy-button">Купить</button>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
     <div class="pagination">
