--- a/index.html
+++ b/index.html
@@ -263,8 +263,8 @@
                         <hr>
                         <ul class="lesson-details">
                             <li class="lesson-detail duration"><span>Продолжительность</span><span>45 минут</span></li>
-                            <li class="lesson-detail total"><span>Цена</span><span>3600 рублей</span></li>
-                            <li class="lesson-detail per-lesson"><span>Цена за урок</span><span>900 рублей</span></li>
+                            <li class="lesson-detail total"><span>Цена</span><span>3600₽</span></li>
+                            <li class="lesson-detail per-lesson"><span>Цена за урок</span><span>900₽</span></li>
                         </ul>
                         <hr>
                         <button class="plan-button" onclick="selectPlan(this)">Записаться на занятие</button>
@@ -273,15 +273,15 @@
                 <div class="pricing-plan">
                     <div class="lesson-card">
                         <div class="lesson-header">
-                            <div class="lesson-count">4</div>
-                            <div class="lesson-label">Занятия</div>
+                            <div class="lesson-count">8</div>
+                            <div class="lesson-label">Занятий</div>
                         </div>
-                        <div class="lesson-price">900₽</div>
+                        <div class="lesson-price">800₽</div>
                         <hr>
                         <ul class="lesson-details">
                             <li class="lesson-detail duration"><span>Продолжительность</span><span>45 минут</span></li>
-                            <li class="lesson-detail total"><span>Цена</span><span>3600 рублей</span></li>
-                            <li class="lesson-detail per-lesson"><span>Цена за урок</span><span>900 рублей</span></li>
+                            <li class="lesson-detail total"><span>Цена</span><span>6400₽</span></li>
+                            <li class="lesson-detail per-lesson"><span>Цена за урок</span><span>800₽</span></li>
                         </ul>
                         <hr>
                         <button class="plan-button" onclick="selectPlan(this)">Записаться на занятие</button>
@@ -290,15 +290,15 @@
                 <div class="pricing-plan">
                     <div class="lesson-card">
                         <div class="lesson-header">
-                            <div class="lesson-count">4</div>
-                            <div class="lesson-label">Занятия</div>
+                            <div class="lesson-count">16</div>
+                            <div class="lesson-label">Занятий</div>
                         </div>
-                        <div class="lesson-price">900₽</div>
+                        <div class="lesson-price">750₽</div>
                         <hr>
                         <ul class="lesson-details">
                             <li class="lesson-detail duration"><span>Продолжительность</span><span class="lesson-detail_count">45 минут</span></li>
-                            <li class="lesson-detail total"><span>Цена</span><span class="lesson-detail_count">3600 рублей</span></li>
-                            <li class="lesson-detail per-lesson"><span>Цена за урок</span ><span class="lesson-detail_count">900 рублей</span></li>
+                            <li class="lesson-detail total"><span>Цена</span><span class="lesson-detail_count">12000₽</span></li>
+                            <li class="lesson-detail per-lesson"><span>Цена за урок</span ><span class="lesson-detail_count">750₽</span></li>
                         </ul>
                         <hr>
                         <button class="plan-button" onclick="selectPlan(this)">Записаться на занятие</button>
@@ -307,20 +307,19 @@
                 <div class="pricing-plan">
                     <div class="lesson-card">
                         <div class="lesson-header">
-                            <div class="lesson-count">4</div>
-                            <div class="lesson-label">занятия</div>
+                            <div class="lesson-count">24</div>
+                            <div class="lesson-label">Занятия</div>
                         </div>
-                        <div class="lesson-price">900₽</div>
+                        <div class="lesson-price">720₽</div>
                         <hr>
                         <ul class="lesson-details">
                             <li class="lesson-detail duration"><span>Продолжительность</span><span>45 минут</span></li>
-                            <li class="lesson-detail total"><span>Цена</span><span>3600 рублей</span></li>
-                            <li class="lesson-detail per-lesson"><span>Цена за урок</span><span>900 рублей</span></li>
+                            <li class="lesson-detail total"><span>Цена</span><span>17280₽</span></li>
+                            <li class="lesson-detail per-lesson"><span>Цена за урок</span><span>720₽</span></li>
                         </ul>
                         <hr>
                         <button class="plan-button" onclick="selectPlan(this)">Записаться на занятие</button>
                     </div>
-                </div>
             </div>
             <div class="contact-form-wrapper">
                 <form action="#" class="form-container">
