--- a/index.html
+++ b/index.html
@@ -262,9 +262,9 @@
                         <div class="lesson-price">900₽</div>
                         <hr>
                         <ul class="lesson-details">
-                            <li class="lesson-detail duration"><span>Продолжительность</span><span>45 минут</span></li>
-                            <li class="lesson-detail total"><span>Цена</span><span>3600₽</span></li>
-                            <li class="lesson-detail per-lesson"><span>Цена за урок</span><span>900₽</span></li>
+                            <li class="lesson-detail duration"><span>Продолжительность</span><span class="lesson-detail_count">45 минут</span></li>
+                            <li class="lesson-detail total"><span>Цена</span><span class="lesson-detail_count">3600₽</span></li>
+                            <li class="lesson-detail per-lesson"><span>Цена за урок</span><span class="lesson-detail_count">900₽</span></li>
                         </ul>
                         <hr>
                         <button class="plan-button" onclick="selectPlan(this)">Записаться на занятие</button>
@@ -279,9 +279,9 @@
                         <div class="lesson-price">800₽</div>
                         <hr>
                         <ul class="lesson-details">
-                            <li class="lesson-detail duration"><span>Продолжительность</span><span>45 минут</span></li>
-                            <li class="lesson-detail total"><span>Цена</span><span>6400₽</span></li>
-                            <li class="lesson-detail per-lesson"><span>Цена за урок</span><span>800₽</span></li>
+                            <li class="lesson-detail duration"><span>Продолжительность</span><span class="lesson-detail_count">45 минут</span></li>
+                            <li class="lesson-detail total"><span>Цена</span><span class="lesson-detail_count">6400₽</span></li>
+                            <li class="lesson-detail per-lesson"><span>Цена за урок</span><span class="lesson-detail_count">800₽</span></li>
                         </ul>
                         <hr>
                         <button class="plan-button" onclick="selectPlan(this)">Записаться на занятие</button>
@@ -313,15 +313,15 @@
                         <div class="lesson-price">720₽</div>
                         <hr>
                         <ul class="lesson-details">
-                            <li class="lesson-detail duration"><span>Продолжительность</span><span>45 минут</span></li>
-                            <li class="lesson-detail total"><span>Цена</span><span>17280₽</span></li>
-                            <li class="lesson-detail per-lesson"><span>Цена за урок</span><span>720₽</span></li>
+                            <li class="lesson-detail duration"><span>Продолжительность</span><span class="lesson-detail_count">45 минут</span></li>
+                            <li class="lesson-detail total"><span>Цена</span><span class="lesson-detail_count">17280₽</span></li>
+                            <li class="lesson-detail per-lesson"><span>Цена за урок</span><span class="lesson-detail_count">720₽</span></li>
                         </ul>
                         <hr>
                         <button class="plan-button" onclick="selectPlan(this)">Записаться на занятие</button>
                     </div>
             </div>
-            <div class="contact-form-wrapper">
+                 <div class="contact-form-wrapper">
                 <form action="#" class="form-container">
                     <input type="text" placeholder="Имя">
                     <input type="tel" placeholder="+7 (900) 300 30 30">
